# Parqcel

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  PERFORMANCE.md  Parqcel.spec  README.md  SECURITY.md  config.toml  license.txt  license_key.txt  mypy.ini  project_structure.txt  pyproject.toml  requirements-ml.txt  requirements.txt  run_parqcel.bat  run_parqcel.cmd  valid_keys.json
.github/workflows/: ci.yml
app/: __init__.py  launch_Parqcel.bat  main.py  viewer.py
installer/: parqcel.iss  release_notes.md  windows_release_checklist.md
sample-data/: email_phishing_data.parquet
scripts/: build_windows_desktop.ps1  gen_icons.py
src/: cli.py  logging_config.py  main.py
src/ai/: __init__.py  assistant.py  backends.py  config.py  embeddings.py  prompts.json  validator.py
src/app/: background_tasks.py  edit_dialogs.py  edit_menu_controller.py  main_window.py  temp_files.py
src/app/widgets/: ai_assistant.py  ai_settings.py  edit_menu_gui.py  featurize_gui.py  pca_gui.py
src/data/: edit_button.py  polars_utils.py  stats_util.py
src/ds/: __init__.py  dimensionality.py  featurize.py
src/licensing/: __init__.py  license_generator.py  license_validator.py
src/logic/: date_formats.py  filtering.py  filters.py  parsers.py  stats.py
src/models/: polars_table_model.py
src/parqcel/: __init__.py  __main__.py
src/ui/: main_window.py  polars_table_model.py
tests/: conftest.py  sample_parquet_file_test.parquet  test_ai_assistant.py  test_ai_backends.py  test_ai_execute.py  test_ai_settings.py  test_data_handler.py  test_dimensionality.py  test_edit_menu_controller.py  test_featurize.py  test_filtering.py  test_main_window_async.py  test_main_window_undo.py  test_main_window_workflow.py  test_model.py  test_parsers.py  test_stats.py  test_validator.py
