[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(\
  \.eggs
| \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| build
| dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["src/__pycache__", "tests/__pycache__"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parqcel"
version = "0.1.0"
description = "Parqcel: fast Parquet viewer/editor using PyQt6 and Polars"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "polars==1.28.1",
  "PyQt6==6.9.0"
]

[project.optional-dependencies]
ml = [
  "numpy",
  "scikit-learn",
  "plotly",
  "umap-learn",
]
ai = [
  "numpy",
  "scikit-learn",
  "plotly",
  "umap-learn",
  "sentence-transformers",
  "faiss-cpu",
  "langchain",
  "transformers",
  "openai>=0.28,<1",
  "keyring",
]
dev = [
  "pytest",
  "pytest-qt",
  "black",
  "ruff",
  "mypy",
]

[project.scripts]
parqcel = "parqcel.__main__:main"
parqcel-cli = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
py-modules = ["main", "logging_config", "cli"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"ai" = ["prompts.json"]
"parqcel.assets" = ["parqcel_icon.svg", "parqcel_icon.png", "parqcel_icon.ico"]
